[metadata]
license_files = LICENSE.md

[tool:pytest]
addopts=--tb=short --strict-markers -ra
testspath = tests

[flake8]
ignore = E501,W503,W504

[isort]
skip=.tox
atomic=true
multi_line_output=5
extra_standard_library=types
known_third_party=pytest,_pytest,django,pytz,uritemplate
known_first_party=dynaform,tests

[coverage:run]
# NOTE: source is ignored with pytest-cov (but uses the same).
source = .
include = django-dynaform/*,tests/*
branch = 1

[coverage:report]
include = django-dynaform/*,tests/*
exclude_lines =
    pragma: no cover
    raise NotImplementedError