[metadata]
license_files = LICENSE.md

[tool:pytest]
addopts=--tb=short --strict-markers -ra
testspath = tests

[flake8]
ignore = E501,W503,W504

[black]
include = '\.pyi?$'
line-length = 100
target-version = ["py38", "py39"]

[isort]
atomic = true
profile=black
skip = ['.git', 'venv', 'env', '.venv', '.tox']
extra_standard_library=types
known_third_party=pytest,_pytest,django,pytz,uritemplate
known_first_party=dynaform,tests

[coverage:run]
# NOTE: source is ignored with pytest-cov (but uses the same).
source = .
include = django-dynaform/*,tests/*
branch = 1

[coverage:report]
include = django-dynaform/*,tests/*
exclude_lines =
    pragma: no cover
    raise NotImplementedError
